--- a/styles/add_styles.css
+++ b/styles/add_styles.css
@@ -2312,11 +2312,23 @@
 	height: 0;
 }
 
-.photo_icon_2 {
+.photo_icon_2_wrapp {
 	display: block;
 	width: 80px;
-	height: auto;
+	height: 80px;
 	margin: 0 auto;
+	position: relative;
+}
+
+.photo_icon_2 {
+	display: block;
+	width: 100%;
+	height: auto;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
 }
 
 .add_photo h3 {
