--- a/styles/add_styles.css
+++ b/styles/add_styles.css
@@ -1199,6 +1199,9 @@
 
 .tabs_3_wrapp {
 	margin-bottom: 100px;
+	border-left: 1px solid #e5e5e5;
+    border-right: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .tabs_3_links {
